<resources>
    <string name="app_name">SampleOptionsMenuApplication</string>

    <!-- Menu Items-->
    <string name="mainactivity_action_red">Kırmızı</string>
    <string name="mainactivity_action_green">Yeşil</string>
    <string name="mainactivity_action_blue">Mavi</string>
    <string name="mainactivity_action_black">Siyah</string>
    <string name="mainactivity_action_random">Rasgele</string>
    <string name="mainactivity_action_about">Hakkında</string>
    <string name="mainactivity_action_exit">Çıkış</string>

    <!--Runtime messages-->
    <string name="about_message">C ve Sistem Programcıları Derneği</string>
    <string name="about_title">CSD</string>
    <string name="about_positive_button">Tamam</string>
</resources>